[package]
name = "aleo-address-derivation"
version = "0.1.0"
edition = "2021"

[lib]
name = "aleo_address_derivation"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
snarkvm-console-account = "0.16.19"
snarkvm-console-network = "0.16.19"

[profile.release]
opt-level = 3
lto = true