[package]
name = "aleo-address-derivation"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
snarkvm-console-account = { version = "0.16.19", features = ["compute_key", "private_key", "signature"] }
snarkvm-console-network = { version = "0.16.19", features = ["wasm"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true